--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,27 @@
 body {
     text-align: center;
 }
+
+/*
+ * Modal
+ */
+
+.overlay {
+    visibility: hidden;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width:100%;
+    height:100%;
+    text-align:center;
+    z-index: 1000;
+}
+
+.overlay div {
+    width:300px;
+    margin: 250px auto;
+    background-color: #ffe;
+    border:1px solid #000;
+    padding:15px;
+    text-align:center;
+}
